--- a/SupplierRanking/Views/Login/Login.cshtml
+++ b/SupplierRanking/Views/Login/Login.cshtml
@@ -12,7 +12,7 @@
 
             <form class="login100-form validate-form">
                 <span class="login100-form-title">
-                    Member Login
+                    Login
                 </span>
 
                 <div class="wrap-input100 validate-input" data-validate="Valid email is required: ex@abc.xyz">
@@ -39,10 +39,10 @@
 
                 <div class="text-center p-t-12">
                     <span class="txt1">
-                        Forgot
+                        Esqueceu
                     </span>
                     <a class="txt2" href="#">
-                        Username / Password?
+                        Usuário / se?
                     </a>
                 </div>
 
