--- a/SupplierRanking/Views/Fornecedor/UpdateFornecedor.cshtml
+++ b/SupplierRanking/Views/Fornecedor/UpdateFornecedor.cshtml
@@ -4,7 +4,7 @@
 }
 <div class="container-login100">
     <div class="wrap-login100" style="background-color: white;">
-        <h2>Cadastro Fornecedor</h2>
+        <h2>update Fornecedor</h2>
         <form action="../Fornecedor/UpdateFornecedor" method="post" class="login100-form validate-form" enctype="multipart/form-data">
 
             <!--- Campos do Fornecedor -->
@@ -12,9 +12,11 @@
                 <label for="imagem" style="border: 1px solid; background-color: gainsboro; padding: .5em; font-size: 12px; cursor: pointer;">Imagem de Perfil</label>
                 <input type="file" accept="image/*" id="imagem" name="imagem" style="display: none">
 
-                @*<input type="file" name="imagem" />*@
+                <input type="file" name="imagem" />
                 <br /> <br />
                 <input type="text" name="cnpj" placeholder="CNPJ">
+                <br /> <br />          
+                <input type="text" name="cnpjConfirma" placeholder="confirme o cnpj CNPJ">
                 <br /> <br />
                 <input type="text" name="nome_empresa" placeholder="Nome da Empresa">
                 <br /> <br />
