--- a/SupplierRanking/Views/Fornecedor/UpdateSenha.cshtml
+++ b/SupplierRanking/Views/Fornecedor/UpdateSenha.cshtml
@@ -11,13 +11,13 @@
             <!--- Formulario para enviar e-mails -->
             <div id="">
                 <h2>Formulário de redefinição de senha </h2>
-                <input type="text" name="cnpj" placeholder="CNPJ">
+                <input type="text" name="cnpj" placeholder="Confirme o CNPJ">
                 <br />  <br />
-                <input type="text" name="cnpjDigitado" placeholder="Confirme o CNPJ">
+                <input type="text" name="senha" placeholder="senha atual">
                 <br />  <br />
-                <input type="text" name="senha" placeholder="Senha antiga">
+                <input type="text" name="novaSenha" placeholder="nova senha">
                 <br />  <br />
-                <input type="text" name="novaSenha" placeholder="Nova Senha">
+                <input type="text" name="senhaConfirma" placeholder="confirme a senha">
 
 
 
