--- a/SupplierRanking/Views/Fornecedor/UpdateFornecedor.cshtml
+++ b/SupplierRanking/Views/Fornecedor/UpdateFornecedor.cshtml
@@ -1,9 +1,13 @@
-﻿@{
-    ViewBag.Title = "Cadastro";
+﻿@model SupplierRanking.Models.Fornecedor
+@{
+    ViewBag.Title = "UpdateFornecedor";
+    //Layout = "~/Views/Shared/LoginLayout.cshtml";
     Layout = "~/Views/Shared/LoginLayout.cshtml";
 }
 <div class="container-login100">
+
     <div class="wrap-login100" style="background-color: white;">
+
         <h2>update Fornecedor</h2>
         <form action="../Fornecedor/UpdateFornecedor" method="post" class="login100-form validate-form" enctype="multipart/form-data">
 
@@ -12,38 +16,36 @@
                 <label for="imagem" style="border: 1px solid; background-color: gainsboro; padding: .5em; font-size: 12px; cursor: pointer;">Imagem de Perfil</label>
                 <input type="file" accept="image/*" id="imagem" name="imagem" style="display: none">
 
-                <input type="file" name="imagem" />
+                
                 <br /> <br />
-                <input type="text" name="cnpj" placeholder="CNPJ">
+                <input type="text" name="confirmaSenha" placeholder="Digite sua senha">                
                 <br /> <br />          
-                <input type="text" name="cnpjConfirma" placeholder="confirme o cnpj CNPJ">
+                <input type="text" name="@Model.Cnpj" placeholder="CNPJ">
                 <br /> <br />
-                <input type="text" name="nome_empresa" placeholder="Nome da Empresa">
+                <input type="text" name="@Model.Nome_empresa" placeholder="Nome da Empresa">
                 <br /> <br />
-                <input type="text" name="email" placeholder="Email">
-                              
+                <input type="text" name="@Model.Email" placeholder="Email">                             
                 <br /> <br />
-                <input type="text" name="cep" placeholder="CEP">
+                <input type="text" name="@Model.Cep" placeholder="CEP">
                 <br /> <br />
-                <input type="text" name="endereco" placeholder="Endereço">
+                <input type="text" name="@Model.Endereco" placeholder="Endereço">
                 <br /> <br />
-                <input type="text" name="bairro" placeholder="Bairro">
+                <input type="text" name="@Model.Bairro" placeholder="Bairro">
                 <br /> <br />
-                <input type="text" name="cidade" placeholder="Cidade">
+                <input type="text" name="@Model.Cidade" placeholder="Cidade">
                 <br /> <br />
-                <input type="text" name="uf" placeholder="UF">
+                <input type="text" name="@Model.Uf" placeholder="UF">
                 <br /> <br />
-                <input type="text" name="telefone" placeholder="(00) 0000-0000">
-                <input type="text" name="celular" placeholder="(00) 00000-0000">
+                <input type="text" name="@Model.Telefone" placeholder="(00) 0000-0000">
+                <input type="text" name="@Model.Celular" placeholder="(00) 00000-0000">
                 <br /> <br />
-                <input type="text" name="slogan" placeholder="Digite o seu slogan!">
+                <input type="text" name="@Model.Slogan" placeholder="Digite o seu slogan!">
                 <br /> <br />
-                <input type="text" name="descricao" placeholder="Uma breve descrição">
+                <input type="text" name="@Model.Descricao" placeholder="Uma breve descrição">
                 <br /> <br />
-                <input type="text" name="nome_categoria" placeholder="categoria">
-
+                <input type="text" name="@Model.Nome_categoria" placeholder="categoria">
                 <br /> <br />             
-
+                <input type="file" name="@Model.Imagem" />
                 <br /> <br />
 
             </div>
