--- a/SupplierRanking/Views/Fornecedor/RestaurarSenha.cshtml
+++ b/SupplierRanking/Views/Fornecedor/RestaurarSenha.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Cadastro";
+    ViewBag.Title = "Restaurar Senha";
     Layout = "~/Views/Shared/_LayoutLogin.cshtml";
 }
 
@@ -14,13 +14,7 @@
 
                 <h4>Confirme seu CNPJ para maior segurança.</h4>
                 <input type="text" name="cnpj" placeholder="Confirme o CNPJ">
-                <br />  <br />
-
-                <h2>INSTRUÇÕES !</h2>   
-                <h4>Caso não saiba sua antiga senha e quer REDEFINIR, preencha somento os campos de nova senha e a confirme.</h4> 
-                <h4>Caso queira apenas ALTERAR sua senha, preencha o campo da senha atual e redefina nos campos de nova senha.</h4>     
-                <input type="text" name="senha" placeholder="senha atual">
-                <br />  <br />
+                <br />  <br />         
                 <input type="text" name="novaSenha" placeholder="nova senha">
                 <br />  <br />
                 <input type="text" name="senhaConfirma" placeholder="confirme a senha">
